--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="he">Etch-a-Sketch</h1>
+    <h1 id="header">Etch-a-Sketch</h1>
+    <div id="grid-container"></div>
+    <script src="script.js" defer></script>
 </body>
 </html>
