Can draw and erase on the grid

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="header">Etch-a-Sketch</h1>
-    <div id="grid-container"></div>
+    <div id="header">
+        <h1>Etch-a-Sketch</h1>
+    </div>
+    <div id="grid-container">
+        <div id="grid-element-container"></div>
+    </div>
+    <div id="buttons-container">
+        <button id="draw-button" class="btn">Draw</button>
+        <button id="erase-button" class="btn">Erase</button>
+    </div>
     <script src="script.js" defer></script>
 </body>
 </html>
