Added button that paints each tile a one-time random color.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="buttons-container">
         <button id="draw-button" class="btn">Draw</button>
         <button id="erase-button" class="btn">Erase</button>
+        <button id="color-button" class="btn">Color</button>
     </div>
     <script src="script.js" defer></script>
 </body>
